Generics_Extend_WildCard/Code5_error_report.txt
javac errors for Code5.java 
Code5.java:9: error: no suitable method found for add(T)
        list.add(element); 
            ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
  where T is a type-variable:
    T extends Object declared in method <T>processList(List<? extends Object>,T)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ? extends Object
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 
========================= 
ExtendJ errors for Code5.java 
 
========================= 
Eclipse ECJ errors for Code5.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code5.java (at line 9)
	list.add(element); 
	     ^^^
The method add(capture#1-of ? extends Object) in the type List<capture#1-of ? extends Object> is not applicable for the arguments (T)
----------
1 problem (1 error)
